# CompoSED

./: .gitignore  README.md  pyproject.toml
composed/: __init__.py  catalog.py  data.py  likelihood.py  parameters.py  plot.py  provenance.py  results.py
composed/backends/: __init__.py  base.py  cigale.py  fsps.py  mock.py
composed/experimental/: cigale_fsps_stellar.py
composed/experimental/cigale_modules/: fsps_stellar.py
composed/experimental/jaxcigale/: __init__.py  bridge.py  core.py  cue.py  cue_port.py  dependencies.py  fsps_nebular.py  modules.py  nuts.py  parameters.py  (+3 more)
composed/transforms/: __init__.py
docs/: cigale_backend.md  citations.md  design.md  environment.md  experimental_fsps_cigale.md  experimental_jaxcigale.md  install.md  validation_provenance.md
envs/: composed-cigale.yml  composed-core.yml  composed-fsps.yml  composed-science-cpu.yml
examples/: cigale_photometry_demo.py  experimental_cigale_escape_fraction_sweep.py  experimental_cigale_fsps_bc03_parameter_sweep.py  experimental_cigale_fsps_stellar_sanity.py  experimental_cigale_mock_jaxcigale_cue_nuts.py  experimental_cue_jax_port_comparison.py  experimental_dsps_cue_nebular_validation.py  experimental_dsps_fsps_clock_diagnostic.py  experimental_fsps_nebular_vs_cigale_nebular.py  experimental_jaxcigale_dsps_nuts_recovery.py  experimental_jaxcigale_dust_attenuation_diagnostic.py  experimental_jaxcigale_photometry_demo.py  fsps_photometry_demo.py  sbi_mock_photometry_demo.py  validate_fsps_backend.py  validation_backend_cross_validation.py
inftools/: __init__.py  batch.py  mixed_tamis.py  sbi.py  transforms.py
notebooks/: cosmos2020_sbi_fsps_gpu_timing.ipynb  experimental_fsps_spectrum_fitting.ipynb  experimental_jaxcigale_nuts_assessment.ipynb
notebooks/smoke/: 06_spectrum_fitting_smoke_test_analytic.ipynb  07_jades_like_nirspec_prism_smoke_test_analytic_toy_nebular.ipynb  08_jades_like_joint_spectrophotometry_smoke_test_analytic_toy_nebular.ipynb  09_jades_like_continuity_sfh_smoke_test_dsps_toy_nebular.ipynb  10_jades_like_continuity_sfh_10bin_smoke_test_dsps_toy_nebular.ipynb  11_cigale_mixed_prior_smoke_test.ipynb
notebooks/validation/: 03_gordon16_dust_validation.ipynb  04_backend_cross_validation_single_sed.ipynb  05_cigale_mock_jaxcigale_photometric_validation.ipynb  06_dsps_cue_spectrum_fitting_validation.ipynb  07_jades_like_dsps_cue_prism_validation.ipynb  08_dsps_cue_joint_spectrophotometry_validation.ipynb  09_cigale_mixed_prior_validation.ipynb  README.md
scripts/: check_environment.py
sedinfer/: __init__.py  catalog.py
tests/: test_batch_fit.py  test_catalog_grid.py  test_cigale_backend.py  test_environment_checker.py  test_fsps_backend.py  test_grid_sampling.py  test_likelihood.py  test_mixed_tamis.py  test_plot.py  test_popcosmos.py  test_priors_parameters.py  test_provenance.py  test_results.py  test_sbi.py  test_spectral_likelihood.py  test_transforms.py
tests/experimental/: test_cigale_fsps_conventions.py  test_cigale_fsps_stellar.py  test_gordon16_dust_validation.py  test_jaxcigale.py  test_jaxcigale_cue.py
