[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composed"
version = "0.1.0"
description = "Composable Bayesian SED fitting and photo-z inference."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Gregoire" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "astropy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "matplotlib",
]
fsps = [
  "fsps>=0.4",
  "astro-sedpy>=0.4,<0.5",
]
cigale = [
  "pcigale<2025",
]
sbi = [
  "torch",
  "nflows",
]
jaxcigale = [
  "jax",
  "jaxlib",
  "dsps",
  "numpyro",
]
all = [
  "fsps>=0.4",
  "astro-sedpy>=0.4,<0.5",
  "pcigale<2025",
  "torch",
  "nflows",
  "jax",
  "jaxlib",
  "dsps",
  "numpyro",
  "matplotlib",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["composed*", "inftools*"]
