[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "composed"
version = "0.1.0"
description = "Composable Bayesian SED fitting and photo-z inference."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Gregoire" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy",
  "astropy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "matplotlib",
  "scipy",
]
plot = [
  "matplotlib",
  "corner",
]
samplers = [
  "scipy",
  "emcee",
  "pocomc",
  "tqdm",
]
notebooks = [
  "jupyterlab",
  "ipykernel",
  "pandas",
  "tqdm",
]
fsps = [
  "fsps==0.4.7",
  "astro-sedpy==0.4.1",
]
cigale = [
  # Install CIGALE itself from the upstream v2022.0 tutorial/release:
  # https://gitlab.lam.fr/cigale/cigale/-/tree/v2022.0
]
sbi = [
  "torch",
  "nflows",
  "scikit-learn",
]
jaxcigale = [
  "jax==0.4.38",
  "jaxlib==0.4.38",
  "dsps",
  "numpyro==0.17.0",
  "h5py",
  "dill",
  "scikit-learn",
]
all = [
  "fsps==0.4.7",
  "astro-sedpy==0.4.1",
  "torch",
  "nflows",
  "scikit-learn",
  "jax==0.4.38",
  "jaxlib==0.4.38",
  "dsps",
  "numpyro==0.17.0",
  "h5py",
  "dill",
  "scipy",
  "emcee",
  "pocomc",
  "corner",
  "pandas",
  "tqdm",
  "matplotlib",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["composed*", "inftools*"]
